--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 						<!-- Panel (Banner) -->
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
-									<h1 class="major">Hello, my name<br />
-									is Ethereal</h1>
-									<p>This is <strong>Ethereal</strong>, a free site template by AJ for <a href="https://html5up.net">HTML5 UP</a>. It’s fully responsive, built on HTML5 and CSS3, and released entirely for free under the Creative Commons license. Hope you dig it :)</p>
+									<h1 class="major">Hey, My Girl<br />
+									  </h1>
+									<p>This is <strong>US</strong>, some detail of our life. It’s fully responsive, built on HTML5 and CSS3, and released entirely for free under the Creative Commons license. Hope you dig it :)</p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
@@ -408,7 +408,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							</section>
 
 						<!-- Copyright -->
-							<div class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+							<div class="copyright">&copy; Cheung.Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
 
 					</div>
 
