--- a/index.html
+++ b/index.html
@@ -111,10 +111,11 @@
 							<section class="panel color4-alt">
 								<div class="intro color4">
 									<h2 class="major">Plaaaaa..n</h2>
-									<p>想带你去一些地方<br />
+									<p>emmm，前面的图片本来想配上文字的，哪天换个排版再写吧<br />
+										想以后带你去一些地方<br />
 										先计划一下<br />
 										<br />
-										点右边看看，图标就乱放的啦～
+										点右边看看，图标乱放的啦～
 									</p>
 								</div>
 								<div class="inner columns divided">
@@ -138,7 +139,7 @@
 									<p>第一次做这东西，头发都要掉光啦。
 										还是个半动态的，没后台，后台挂在GitHub上面。<br />
 										因为我想，以后会慢慢的，添加更多的照片在这上面，总不能做个静态的吧。<br />
-										那等我们老了，这个站点可能内容就很丰富了吧 <br />
+										陪我把这站点慢慢的丰富起来呗，小姑娘 <br />
 										❤
 									</p>
 								</div>
@@ -177,8 +178,8 @@
 								</div>
 							</section>
 
-						<!-- Copyright -->
-							<div class="copyright">&copy; Cheung.Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+						<!-- Copyright html5up.net -->
+							<div class="copyright">&copy; Cheung.Design <a href="#"> For My Little Girl </a>.</div>
 
 					</div>
 
